# chull

./: .gitignore  CMakeLists.txt  README.md
share/: Findchull.cmake
src/: CMakeLists.txt  chull.h
test/: test.cpp
